...
          tabBarIcon: ({ color, size }) => <Feather size={size} name="home" color={color} />,
        }}
      />
      <Tabs.Screen
        name="search"
        options={{
          tabBarTestID: 'search-tab',
          title: 'Search',
          tabBarIcon: ({ color, size }) => <Feather size={size} name="search" color={color} />,
        }}
      />
      <Tabs.Screen
        name="start-stream"
...
          tabBarIcon: ({ color, size }) => <Feather size={size} name="bell" color={color} />,
        }}
      />
      <Tabs.Screen
        name="profile"
        options={{
          tabBarTestID: 'profile-tab',
          title: 'Profile',
          href: {
            pathname: '/profile/[userid]',
            params: {
              userid: user.id,
            },
...
