...
      flex={1}>
      <XStack flex={1}>
        <Input
          value={query}
          onChangeText={(e) => setQuery(e)}
          onKeyPress={handleKeyPress}
          testID="search-input"
          borderColor="$colorTransparent"
          backgroundColor="$colorTransparent"
          placeholder="Search"
          placeholderTextColor="$textWashedOut"
          overflow="hidden"
          textOverflow="hidden"
...
            backgroundColor: '$colorTransparent',
            borderColor: '$colorTransparent',
          }}
        />
      </XStack>
      <Button
        testID="search-button"
        onPress={() => {
          if (query.length) {
            onSearch(query);
          }
        }}
        icon={<Feather name="search" size={21} color="white" />}
...
