...
            backgroundColor="$accentMain"
            circular
            icon={<Feather name="gift" size={22} color="white" />}
          />
        )}
        <Button
          testID="gif-button"
          size="$5"
          onPress={() => GiphyDialog.show()}
          backgroundColor="$accentMain"
          circular
          icon={<MaterialIcons name="gif" size={40} color="white" />}
        />
...
