export const genres = [
  {
    text: 'Chatting 💬',
    color: '#E16F6F',
  },
  {
    text: 'Beauty 💄',
    color: '#E16FDD',
  },
  {
    text: 'Gaming 🎮',
    color: '#6FB1E1',
  },
  {
    text: 'Nature 🌳',
    color: '#85D95D',
  },
  {
    text: 'Sport 🏈',
    color: '#FBC151',
  },
  {
    text: 'Art 🎨',
    color: '#E4D3A6',
  },
  {
    text: 'IRL 😄',
    color: '#F4F2C3',
  },
  {
    text: 'Football ⚽️',
    color: '#C0C0C0',
  },
  {
    text: 'Cooking 🍜',
    color: '#FFE9CE',
  },
  {
    text: 'Music 🎶',
    color: '#D283F8',
  },
  {
    text: 'Podcast 🎙️',
    color: '#C2C2C2',
  },
  {
    text: 'Education 👨‍🏫',
    color: '#E6E890',
  },
  {
    text: 'Camping ⛺️',
    color: '#2AE3A1',
  },
];
