...

  return (
    <SafeAreaView style={{ backgroundColor: '#151718' }}>
      <YStack height="100%" backgroundColor="#151718" padding="$4" justifyContent="space-between">
        <XStack>
          <Link asChild href={{ pathname: '/' }}>
            <Feather size={28} name="x" color="#fff" testID="x-icon" />
          </Link>
        </XStack>

        <StreamPreviewImage
          uri={imageUri?.image.uri ?? null}
          handleAddImage={openActionSheet}
...
          backgroundColor={
            selectedGenre.filter((g) => g.selected === true).length < 1
              ? '$primaryLight'
              : '$accentMain'
          }
          disabled={selectedGenre.filter((g) => g.selected === true).length < 1}>
          Create Stream
        </Button>
      </YStack>
    </SafeAreaView>
  );
};

...
