appId: ${APP_ID}
---
- assertVisible:
    id: 'profile-tab'

- tapOn:
    id: 'profile-tab'

- assertVisible: 'Edit Profile'

- assertVisible:
    id: 'settings-button'

- assertVisible:
    id: 'profile-avatar'

- assertVisible:
    id: 'user-dispname'

- assertVisible:
    id: 'user-username'

- assertVisible:
    id: 'user-bio'

- runFlow:
    when:
      visible:
        id: 'followers-pressable'
    file: 'explore-followers.yaml'

- runFlow:
    when:
      visible:
        id: 'followings-pressable'
    file: 'explore-followings.yaml'

- assertVisible:
    id: 'Achievements-button'

- tapOn:
    id: 'Achievements-button'

- swipe:
    start: 50%,81%
    end: 50%,48%
    duration: 300

- assertVisible:
    id: 'Statistics-button'

- tapOn:
    id: 'Statistics-button'

- swipe:
    start: 50%,81%
    end: 50%,48%
    duration: 300

- runFlow:
    when:
      visible:
        id: 'followers-pressable'
    file: 'explore-followers.yaml'
