appId: ${APP_ID}
---
- assertVisible:
    id: 'search-tab'

- tapOn:
    id: 'search-tab'

- assertVisible:
    id: 'search-input'

- assertVisible:
    id: 'search-button'

- tapOn:
    id: 'search-input'

- inputText: 'o'

- assertVisible:
    id: 'Return'

- tapOn:
    id: 'Return'

- tapOn:
    id: 'search-button'

- assertVisible:
    id: 'search-history-item'

- assertVisible: 'Show more'

- tapOn: 'Show more'

- assertVisible: 'Show less'

- tapOn: 'Show less'

- assertVisible:
    id: 'user-search-result-card'
    index: 0
